Javadoc et réglage de la nouvelle vu pour la sauvegarde